# bi-dashboard

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: styles.css
configs/: config.yaml
src/: main.py
src/dashboard/: app.py  callbacks.py  layout.py  roles.py
src/dashboard/components/: charts.py  filters.py  kpi_cards.py
src/data/: database.py  generator.py  queries.py
src/reporting/: csv_export.py  pdf_generator.py
src/utils/: config.py  logger.py
templates/: report_template.html
tests/: test_callbacks.py  test_charts.py  test_ci.py  test_csv_export.py  test_dashboard.py  test_database.py  test_docker.py  test_generator.py  test_integration.py  test_pdf_generator.py  test_placeholder.py  test_queries.py  test_responsive.py  test_roles.py
